fix alignment

--- a/scss/style.css
+++ b/scss/style.css
@@ -463,6 +463,9 @@ space
     padding-top: 15px;
     padding-bottom: 0;
   }
+  .mb-15 {
+    float: left;
+  }
 }
 /* ------------------------------
 
